sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: not found: value i
		i = 0
                ^AlgCombSort:12: error: not found: value i
		while (i+yaw<n) {
                       ^AlgCombSort:13: error: not found: value i
			if (plusPetit(i+yaw, i)) {echange(i, i+yaw); swapped = true}
                                      ^AlgCombSort:13: error: not found: value i
			if (plusPetit(i+yaw, i)) {echange(i, i+yaw); swapped = true}
                                                          ^AlgCombSort:14: error: not found: value i
			i+=1
                        ^